# LaneDetection

./: .gitignore  README.md  pyproject.toml
examples/: iterate_culane.py  load_culane.py
examples/dataloaders/: iterate_culane.py  iterate_tusimple.py
examples/datasets/: load_culane.py  load_tusimple.py
examples/detectors/: classical_tusimple.py  scnn_culane.py
examples/detectors/configs/: classical.toml  scnn.toml
examples/models/: vgg16_bn.py
examples/trainers/: run_scnn.py  train_scnn.py
examples/trainers/configs/: scnn.toml
lane_detection/dataloaders/: __init__.py  base.py  numpy.py
lane_detection/datasets/: CULane.py  __init__.py  base.py  culane.py  tusimple.py
lane_detection/detectors/: __init__.py  base.py  classical.py  scnn.py
lane_detection/models/: __init__.py  scnn.py  vgg.py
lane_detection/trainers/: __init__.py  base.py  scnn.py
lane_detection/transforms/: __init__.py  base.py  center_crop.py  compose.py  identity.py  normalize.py  resize.py  shape.py  to_array.py
lane_detection/utils/: __init__.py  utils.py
