[project]
name = "lane_detection"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy >= 1.26.4",
    "opencv-python",
    "matplotlib >= 3.8.4",
    "jax[cuda] >= 0.5",
    "flax",
    "optax",
    "fire >= 0.6.0",
    "wandb",
    "kagglehub",
    "toml",
    "pillow",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.setuptools]
packages = ["lane_detection"]

[tool.pixi.pypi-dependencies]
torch = { version = ">=2.0.0", index = "https://download.pytorch.org/whl/cpu" }
lane_detection = { path = ".", editable = true }