[project]
name = "lane_detection"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy >= 1.26.4",
    "opencv-python",
    "matplotlib >= 3.8.4",
    "jax[cuda] >= 0.5",
    "flax >= 0.12",
    "optax",
    "orbax",
    "wandb",
    "kagglehub",
    "toml",
    "pillow",
    "h5py",
    "imageio[ffmpeg] >=2.37.0,<3.0"
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.setuptools]
packages = ["lane_detection"]

[tool.pixi.pypi-dependencies]
torch = { version = ">=2.0.0", index = "https://download.pytorch.org/whl/cpu" }
lane_detection = { path = ".", editable = true }